JSP integration (start)

--- a/compshop/pom.xml
+++ b/compshop/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>compshop</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>compshop</name>
-	<description>Test priject for Techstack</description>
+	<description>Test project for Techstack</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -26,6 +26,10 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
